# bricks

./: .gitignore  Makefile.am  README  configure.ac
source/: Makefile.am  bricks.h
source/misc/: bricks.cpp  bricks.h  coin.h  failable.cpp  failable.h  holder.h  journal.cpp  journal.h  singleton.h
source/object/: composite.h  compositenode.h  compositepool.h  compositepooladapter.h  object.h  objecthost.h  objectpage.h  objectpool.h  objectpooladapter.cpp  objectpooladapter.h  objectpoolsize.h  vectoradapter.h
source/resource/: cloneable.h  freezer.h  frozen.h  makable.h  reference.cpp  reference.h  referencereleaser.cpp  referencereleaser.h  referenceresource.cpp  referenceresource.h  releasable.h  resource.h  resourcereleaser.cpp  resourcereleaser.h  stupid.h  stupidmethod.h
sources/: Makefile.am  Makefile.in  bricks.h
sources/bricks/: assist.h  azrael.h  coin.h  common.h  journal.h  misc.h  objectpool.h  player.h
sources/bricks/assist/: indescribable.h  journal.h  objectpool.h  singleton.h
sources/bricks/assist/azrael/: azraelwings.h  cloner.h  defaultfreer.h  evil.h  hell.h  maker.h  reference.h  spirit.h
sources/bricks/assist/chaos/: block.h  chaos.cpp  chaos.h  chaosframe.h  coder.h  fixedpiece.h  fixedstack.cpp  fixedstack.h  piece.cpp  piece.h  stringcoder.h
sources/bricks/assist/journal/: journal.h  log.h  toolkit.h  whylog.cpp  whylog.h
sources/bricks/assist/objectpool/: composite.h  compositepool.h  compositepooladapter.h  objecthost.h  objectpage.h  objectpool.h  objectpooladapter.cpp  objectpooladapter.h  objectpoolrouter.cpp  objectpoolrouter.h  objectreserved.h  objectunit.h
sources/bricks/assist/philosopher/: named.h  philosopher.h  whereami.cpp  whereami.h  whoami.h
sources/bricks/assist/player/: player.cpp  player.h
sources/bricks/azrael/: azrael.h  azraelwings.h  cloner.h  evil.h  hell.h  maker.h  referable.cpp  referable.h  referencefreer.cpp  referencefreer.h  spirit.h  spiritfreer.cpp
sources/bricks/chaos/: block.h  byte.h  chaos.cpp  chaos.h  chaosframe.cpp  chaosframe.h  coder.cpp  coder.h  cstrcoder.cpp  cstrcoder.h  defaultmilestone.cpp  defaultmilestone.h  fixedpiece.cpp  fixedpiece.h  fixedstack.cpp  fixedstack.h  milestone.h  piece.cpp  piece.h  stringcoder.cpp  stringcoder.h
sources/bricks/common/: align.h  azrael.h  byte.h  ceiling.h  chaos.h  failable.cpp  failable.h  holder.h  indescribable.h  list.h  lockfree.cpp  lockfree.h  objectpool.h  philosopher.h  philosopherandplayer.h  player.h  pool.h  secret.h  singleton.h
sources/bricks/common/align/: aligndata.h  alignhead.h  alignstub.h
sources/bricks/common/azrael/: azrael.h  azraelwings.h  cloner.h  defaultfreer.h  evil.h  referable.cpp  referable.h  reference.h  referencefreer.cpp  referencefreer.h  spiritfreer.cpp  spiritfreer.h
sources/bricks/common/chaos/: block.h  byte.h  chaos.cpp  chaos.h  chaosframe.cpp  chaosframe.h  coder.cpp  coder.h  fixedpiece.cpp  fixedstack.cpp  fixedstack.h  piece.h  stringcoder.cpp
sources/bricks/common/journal/: journal.h  log.cpp  logformatter.h  toolkit.cpp  toolkit.h  whylog.cpp
sources/bricks/common/list/: bilist.h  binode.cpp  binode.h  list.h  node.cpp  node.h  queuelist.cpp  queuelist.h  stacklist.cpp  stacklist.h  unilist.h  uninode.cpp  uninode.h
sources/bricks/common/objectpool/: compositepool.h  compositepooladapter.h  objecthost.h  objectpage.h  objectpool.h  objectpooladapter.cpp  objectpooladapter.h  objectpoolsize.h  vectoradapter.h
sources/bricks/common/philosopher/: named.cpp  named.h  philosopher.h  whereami.cpp  whereami.h  whoami.h
sources/bricks/common/player/: player.cpp  player.h
sources/bricks/common/pool/: duck.cpp  duck.h  lockfreestack.cpp  lockfreestack.h  node.cpp  node.h  pool.h  queue.cpp  queue.h  resource.cpp  resource.h  stack.cpp  stack.h
sources/bricks/common/secret/: secret.cpp  secret.h  secretseed.cpp  secretseed.h
sources/bricks/journal/: event.cpp  event.h  eventformatter.h  journal.h  log.cpp  log.h  logformatter.h  toolkit.h  whylog.h
sources/bricks/misc/: bricks.cpp  bricks.h  bricksconfig.cpp  bricksconfig.h  coin.h  failable.cpp  failable.h  holder.h  misc.h
sources/bricks/object/: composite.h  compositenode.h  compositepool.h  compositepooladapter.h  object.h  objecthost.h  objectpage.h  objectpooladapter.cpp  objectpoolsize.h
sources/bricks/objectpool/: compositenode.h  object.h
sources/bricks/pangu/: pangu.h
sources/bricks/philosopher/: named.cpp  named.h  philosopher.h  whereami.cpp  whereami.h  whoami.h
sources/bricks/player/: player.cpp  player.h
sources/bricks/sequence/: attacher.h  cursor.cpp  cursor.h  cursorfactory.cpp  cursorfactory.h  detacher.h  element.cpp  element.h  finder.h  hint.cpp  hint.h  hintfactory.cpp  hintfactory.h  keyword.cpp  keyword.h  keywordfactory.h  seeker.h  sequence.cpp  sequence.h  singularity.cpp  singularity.h  traverser.h  visitor.h
