AUTOMAKE_OPTIONS = subdir-objects
lib_LTLIBRARIES  = libbricks.la
libbricks_la_CPPFLAGS=-std=c++11 $(AM_CPPFLAGS)
libbricks_la_SOURCES = \
					   misc/bricks.h \
					   misc/bricks.cpp \
					   misc/coin.h \
					   misc/failable.h \
					   misc/failable.cpp \
					   misc/holder.h \
					   misc/journal.h \
					   misc/journal.cpp \
					   misc/singleton.h \
					   object/composite.h \
					   object/compositenode.h \
					   object/compositepool.h \
					   object/compositepooladapter.h \
					   object/object.h \
					   object/objecthost.h \
					   object/objectpage.h \
					   object/objectpool.h \
					   object/objectpooladapter.h \
					   object/objectpoolsize.h \
					   object/vectoradapter.h \
					   object/objectpooladapter.cpp \
					   resource/releasable.h \
					   resource/frozen.h \
					   resource/freezer.h \
					   resource/stupidmethod.h \
					   resource/stupid.h \
					   resource/makable.h \
					   resource/cloneable.h \
					   resource/reference.h \
					   resource/reference.cpp \
					   resource/referencereleaser.h \
					   resource/referencereleaser.cpp \
					   resource/resource.h \
					   resource/resourcereleaser.h \
					   resource/resourcereleaser.cpp \
					   resource/referenceresource.h \
					   resource/referenceresource.cpp \
					   bricks.h
