AUTOMAKE_OPTIONS = foreign subdir-objects
AM_CXXFLAGS=-Wall -g -std=c++11

lib_LTLIBRARIES  = libbricks.la
libbricks_la_SOURCES = \
             bricks/common.h \
             bricks/misc.h \
					   bricks/common/singleton.h \
             bricks/common/azrael.h \
             bricks/common/chaos.h \
             bricks/common/indescribable.h \
             bricks/common/philosopherandplayer.h \
             bricks/common/journal.h \
             bricks/common/objectpool.h \
					   bricks/common/azrael/defaultfreer.h \
					   bricks/common/azrael/azrael.h \
					   bricks/common/azrael/azraelwings.h \
					   bricks/common/azrael/evil.h \
					   bricks/common/azrael/maker.h \
					   bricks/common/azrael/cloner.h \
					   bricks/common/azrael/spirit.h \
					   bricks/common/azrael/spiritfreer.h \
					   bricks/common/azrael/spiritfreer.cpp \
					   bricks/common/azrael/reference.h \
					   bricks/common/azrael/referable.h \
					   bricks/common/azrael/referable.cpp \
					   bricks/common/azrael/referencefreer.h \
					   bricks/common/azrael/referencefreer.cpp \
					   bricks/common/chaos/byte.h \
					   bricks/common/chaos/block.h \
					   bricks/common/chaos/piece.h \
					   bricks/common/chaos/piece.cpp \
					   bricks/common/chaos/chaos.h \
					   bricks/common/chaos/chaos.cpp \
					   bricks/common/chaos/chaosframe.h \
					   bricks/common/chaos/chaosframe.cpp \
					   bricks/common/chaos/coder.h \
					   bricks/common/chaos/coder.cpp \
					   bricks/common/chaos/fixedpiece.h \
					   bricks/common/chaos/fixedpiece.cpp \
					   bricks/common/chaos/fixedstack.h \
					   bricks/common/chaos/fixedstack.cpp \
					   bricks/common/chaos/stringcoder.h \
					   bricks/common/chaos/stringcoder.cpp \
					   bricks/common/philosopher/philosopher.h \
					   bricks/common/philosopher/named.h \
					   bricks/common/philosopher/named.cpp \
					   bricks/common/philosopher/whoami.h \
					   bricks/common/philosopher/whereami.h \
					   bricks/common/philosopher/whereami.cpp \
					   bricks/common/player/player.h \
					   bricks/common/player/player.cpp \
					   bricks/common/journal/journal.h \
					   bricks/common/journal/whylog.h \
					   bricks/common/journal/whylog.cpp \
					   bricks/common/journal/log.h \
					   bricks/common/journal/log.cpp \
					   bricks/common/journal/logformatter.h \
					   bricks/common/journal/toolkit.h \
					   bricks/common/objectpool/objectpool.h \
					   bricks/misc/coin.h \
					   bricks/misc/failable.h \
					   bricks/misc/failable.cpp
