AUTOMAKE_OPTIONS = foreign subdir-objects
AM_CXXFLAGS=-Wall -g -std=c++11

lib_LTLIBRARIES  = libbricks.la
libbricks_la_SOURCES = \
    bricks/common.h \
    bricks/assist.h \
	bricks/common/failable.h \
	bricks/common/failable.cpp \
    bricks/assist/singleton.h \
    bricks/assist/azrael.h \
    bricks/assist/chaos.h \
    bricks/assist/indescribable.h \
    bricks/assist/philosopherandplayer.h \
    bricks/assist/journal.h \
    bricks/assist/objectpool.h \
    bricks/assist/azrael/defaultfreer.h \
    bricks/assist/azrael/azrael.h \
    bricks/assist/azrael/azraelwings.h \
    bricks/assist/azrael/evil.h \
    bricks/assist/azrael/maker.h \
    bricks/assist/azrael/cloner.h \
    bricks/assist/azrael/spirit.h \
    bricks/assist/azrael/spiritfreer.h \
    bricks/assist/azrael/spiritfreer.cpp \
    bricks/assist/azrael/reference.h \
    bricks/assist/azrael/referable.h \
    bricks/assist/azrael/referable.cpp \
	bricks/assist/azrael/referencefreer.h \
	bricks/assist/azrael/referencefreer.cpp \
	bricks/assist/chaos/byte.h \
	bricks/assist/chaos/block.h \
	bricks/assist/chaos/piece.h \
	bricks/assist/chaos/piece.cpp \
	bricks/assist/chaos/chaos.h \
	bricks/assist/chaos/chaos.cpp \
	bricks/assist/chaos/chaosframe.h \
	bricks/assist/chaos/chaosframe.cpp \
	bricks/assist/chaos/coder.h \
	bricks/assist/chaos/coder.cpp \
	bricks/assist/chaos/fixedpiece.h \
	bricks/assist/chaos/fixedpiece.cpp \
	bricks/assist/chaos/fixedstack.h \
	bricks/assist/chaos/fixedstack.cpp \
	bricks/assist/chaos/stringcoder.h \
	bricks/assist/chaos/stringcoder.cpp \
	bricks/assist/philosopher/philosopher.h \
	bricks/assist/philosopher/named.h \
	bricks/assist/philosopher/named.cpp \
	bricks/assist/philosopher/whoami.h \
	bricks/assist/philosopher/whereami.h \
	bricks/assist/philosopher/whereami.cpp \
	bricks/assist/player/player.h \
	bricks/assist/player/player.cpp \
	bricks/assist/journal/journal.h \
	bricks/assist/journal/whylog.h \
	bricks/assist/journal/whylog.cpp \
	bricks/assist/journal/log.h \
	bricks/assist/journal/log.cpp \
	bricks/assist/journal/logformatter.h \
	bricks/assist/journal/toolkit.h \
	bricks/assist/objectpool/objectpool.h \
	bricks/coin.h
