AUTOMAKE_OPTIONS = foreign subdir-objects
AM_CXXFLAGS=-Wall -g -std=c++17

lib_LTLIBRARIES  = libbricks.la
libbricks_la_SOURCES = \
    bricks/common.h \
    bricks/common/ceiling.h \
    bricks/common/singleton.h \
	bricks/common/failable.h \
	bricks/common/failable.cpp \
	bricks/common/secret.h \
	bricks/common/secret/secret.h \
	bricks/common/secret/secret.cpp \
	bricks/common/secret/secretseed.h \
	bricks/common/secret/secretseed.cpp \
    bricks/common/align.h \
    bricks/common/align/aligndata.h \
    bricks/common/align/alignhead.h \
    bricks/common/align/alignstub.h \
    bricks/common/list.h \
    bricks/common/list/unilist.h \
    bricks/common/list/uninode.h \
    bricks/common/list/uninode.cpp \
    bricks/common/list/bilist.h \
    bricks/common/list/binode.h \
    bricks/common/list/binode.cpp \
    bricks/common/pool.h \
    bricks/common/pool/resource.h \
    bricks/common/pool/resource.cpp \
    bricks/common/pool/pool.h \
    bricks/common/pool/stack.h \
    bricks/common/pool/stack.cpp \
    bricks/common/pool/queue.h \
    bricks/common/pool/queue.cpp \
    bricks/common/pool/lockfreestack.h \
    bricks/common/pool/lockfreestack.cpp \
    bricks/assist.h \
    bricks/assist/objectpool.h \
    bricks/assist/objectpool/objectpool.h \
    bricks/assist/objectpool/objectunit.h \
    bricks/assist/objectpool/objectreserved.h \
    bricks/assist/objectpool/objectpage.h \
    bricks/assist/objectpool/objecthost.h \
    bricks/assist/objectpool/objectpoolrouter.h \
    bricks/assist/objectpool/objectpoolrouter.cpp \
    bricks/assist/objectpool/objectpooladapter.h \
    bricks/assist/objectpool/objectpooladapter.cpp \
    bricks/assist/azrael.h \
    bricks/assist/chaos.h \
    bricks/assist/indescribable.h \
    bricks/assist/philosopherandplayer.h \
    bricks/assist/journal.h \
    bricks/assist/azrael/defaultfreer.h \
    bricks/assist/azrael/azrael.h \
    bricks/assist/azrael/azraelwings.h \
    bricks/assist/azrael/evil.h \
    bricks/assist/azrael/maker.h \
    bricks/assist/azrael/cloner.h \
    bricks/assist/azrael/spirit.h \
    bricks/assist/azrael/spiritfreer.h \
    bricks/assist/azrael/spiritfreer.cpp \
    bricks/assist/azrael/reference.h \
    bricks/assist/azrael/referable.h \
    bricks/assist/azrael/referable.cpp \
	bricks/assist/azrael/referencefreer.h \
	bricks/assist/azrael/referencefreer.cpp \
	bricks/assist/chaos/byte.h \
	bricks/assist/chaos/block.h \
	bricks/assist/chaos/piece.h \
	bricks/assist/chaos/piece.cpp \
	bricks/assist/chaos/chaos.h \
	bricks/assist/chaos/chaos.cpp \
	bricks/assist/chaos/chaosframe.h \
	bricks/assist/chaos/chaosframe.cpp \
	bricks/assist/chaos/coder.h \
	bricks/assist/chaos/coder.cpp \
	bricks/assist/chaos/fixedpiece.h \
	bricks/assist/chaos/fixedpiece.cpp \
	bricks/assist/chaos/fixedstack.h \
	bricks/assist/chaos/fixedstack.cpp \
	bricks/assist/chaos/stringcoder.h \
	bricks/assist/chaos/stringcoder.cpp \
	bricks/assist/philosopher/philosopher.h \
	bricks/assist/philosopher/named.h \
	bricks/assist/philosopher/named.cpp \
	bricks/assist/philosopher/whoami.h \
	bricks/assist/philosopher/whereami.h \
	bricks/assist/philosopher/whereami.cpp \
	bricks/assist/player/player.h \
	bricks/assist/player/player.cpp \
	bricks/assist/journal/journal.h \
	bricks/assist/journal/whylog.h \
	bricks/assist/journal/whylog.cpp \
	bricks/assist/journal/log.h \
	bricks/assist/journal/log.cpp \
	bricks/assist/journal/logformatter.h \
	bricks/assist/journal/toolkit.h \
	bricks/assist/objectpool/objectpool.h \
	bricks/coin.h
